tests/rosetta/out/Smalltalk/averages-mean-time-of-day.out
/workspace/mochi/tests/rosetta/out/Smalltalk/averages-mean-time-of-day.st:10: parse error, expected integer literal or floating-point literal or decimal literal
